<resources>
	<string name="app_name" translatable="false">DragWeb</string>
	<string name="new_project" translatable="false">New Project</string>
	<string name="project_name" translatable="false">Project Name</string>
	<string name="project_description" translatable="false">Description</string>
	<string name="create" translatable="false">Create</string>
	<string name="common_word_cancel" translatable="false">Cancel</string>
	<string name="delete" translatable="false">Delete</string>
	<string name="export_project" translatable="false">Export</string>
	<string name="save" translatable="false">Save</string>
	<string name="no_projects" translatable="false">No projects yet.\nTap + to create one or import a website.</string>
	<string name="welcome_message" translatable="false">Welcome to DragWeb</string>
	<string name="app_description_short" translatable="false">No-Code Web Builder</string>
	<string name="version_info" translatable="false">Version 1.0</string>
	<string name="view_github" translatable="false">View on GitHub</string>
	<string name="undo" translatable="false">Undo</string>
	<string name="redo" translatable="false">Redo</string>
	<string name="preview" translatable="false">Preview</string>
	<string name="widgets" translatable="false">Widgets</string>
	<string name="design" translatable="false">Design</string>
	<string name="functions" translatable="false">Functions</string>
	<string name="theme_settings" translatable="false">Theme Settings</string>
	<string name="export_html" translatable="false">Export HTML</string>
	<string name="export_zip" translatable="false">Export as ZIP</string>
	<string name="import_website" translatable="false">Import Website</string>
	<string name="import_html_css" translatable="false">Import HTML/CSS</string>
	<string name="select_html_file" translatable="false">Select HTML File</string>
	<string name="select_css_file" translatable="false">Select CSS File (Optional)</string>
	<string name="rename" translatable="false">Rename</string>
	<string name="rename_project" translatable="false">Rename Project</string>
	<string name="my_projects" translatable="false">My Projects</string>
	<string name="about_dragweb" translatable="false">About DragWeb</string>
	<string name="backup_all" translatable="false">Backup All Projects</string>
	<string name="import_zip" translatable="false">Restore Project (ZIP)</string>
	<string name="import_website_desc" translatable="false">Import HTML/CSS Website</string>
	<string name="no_logo" translatable="false">No logo selected</string>
	<string name="logo_selected" translatable="false">Logo selected</string>
	<string name="open" translatable="false">Open</string>
	<string name="backup_project" translatable="false">Backup Project</string>
    <string name="add_new" translatable="false">Add New</string>
    <string name="common_word_view" translatable="false">View</string>
    <string name="common_word_custom_view" translatable="false">Custom View</string>
	<string name="app_subtitle" translatable="false">Build websites on the go</string>
	<string name="common_word_save" translatable="false">Save</string>
	<string name="settings_appearance_theme_light" translatable="false">%1$s Light</string>
	<string name="settings_appearance_theme_dark" translatable="false">%1$s Dark</string>
	<string name="settings_appearance_surface_colors" translatable="false">Theme Colors</string>
	<string name="invalid_hex_color" translatable="false">Invalid HEX color</string>
	<string name="color_added" translatable="false">Color added</string>
	<string name="color_already_exists" translatable="false">Color already exists</string>
	<string name="color_not_selected" translatable="false">No color selected</string>
	<string name="copied_value" translatable="false">Copied: %1$s</string>
	<string name="btn_copy" translatable="false">Copy</string>
	<string name="btn_close" translatable="false">Close</string>
	<string name="btn_add" translatable="false">Add</string>
	<string name="dialog_delete_title" translatable="false">Delete color?</string>
	<string name="dialog_delete_message" translatable="false">Are you sure you want to delete this color?</string>
	<string name="dialog_button_yes" translatable="false">Yes</string>
	<string name="dialog_button_no" translatable="false">No</string>

    <!-- String resources for blocks_logic package -->
    <string name="block_set_var_bool" formatted="false">set %var.b to %b</string>
    <string name="block_set_var_int" formatted="false">set %var.d to %d</string>
    <string name="block_set_var_str" formatted="false">set %var.s to %s</string>
    <string name="block_increase_int" formatted="false">increase %var.d by %d</string>
    <string name="block_decrease_int" formatted="false">decrease %var.d by %d</string>
    <string name="root_spec_initialize">On Page Load</string>
    <string name="root_spec_define">Define</string>
    <string name="root_spec_when">When</string>
    <string name="root_spec_onclicked">clicked</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_accept">Accept</string>
    <string name="err_currently_used_variable">This variable is currently used.</string>
    <string name="logic_btn_add_variable">Add Variable</string>
    <string name="logic_btn_remove_variable">Remove Variable</string>
    <string name="logic_btn_add_list">Add List</string>
    <string name="logic_btn_remove_list">Remove List</string>
    <string name="logic_btn_make_block">Make Block</string>
    <string name="complete_copy">Copied to clipboard.</string>
    <string name="desc_copy_block">Drag block here to copy.</string>
    <string name="block_else">else</string>
    <string name="title_popup_input_int_value">Input Integer</string>
    <string name="title_popup_input_str_value">Input String</string>
    <string name="title_popup_select_int_var">Select Integer Variable</string>
    <string name="title_popup_select_bool_var">Select Boolean Variable</string>
    <string name="title_popup_select_str_var">Select String Variable</string>
    <string name="title_popup_select_int_list">Select Integer List</string>
    <string name="title_popup_select_str_list">Select String List</string>
    <string name="title_popup_select_list">Select List</string>

    <string name="logic_variable_type_boolean">Boolean</string>
    <string name="logic_variable_type_number">Number</string>
    <string name="logic_variable_type_string">String</string>
    <string name="logic_variable_type_map">Map</string>
    <string name="logic_editor_hint_enter_variable_name">Enter variable name</string>
    <string name="search_header">Search</string>
    <string name="logic_popup_title_make_block">Make Block</string>
    <string name="logic_popup_title_add_list">Add List</string>
    <string name="logic_popup_title_add_variable">Add Variable</string>
    <string name="title_bl_cate_var">Variable</string>
    <string name="title_bl_cate_list">List</string>
    <string name="title_bl_cate_control">Control</string>
    <string name="title_bl_cate_operator">Operator</string>
    <string name="title_bl_cate_function">Function</string>
    <string name="title_bl_cate_moreblock">More Block</string>

    <string name="err_currently_used_list">This list is currently used.</string>
    <string name="logic_popup_title_remove_variable">Remove Variable</string>
    <string name="err_valid_min_len">Minimum length is %1$d.</string>
    <string name="err_valid_max_len">Maximum length is %1$d.</string>
    <string name="err_valid_already_used">This name is already used.</string>
    <string name="err_use_rev_name">This name is reserved.</string>
    <string name="err_start_number">Cannot start with a number.</string>
    <string name="err_valid_only_eng_3">Only English letters, numbers, and underscores are allowed.</string>
    <string name="root_spec_oncheckchanged">onCheckChanged</string>
    <string name="root_spec_onitemselected">onItemSelected</string>
    <string name="root_spec_onitemclicked">onItemClicked</string>
    <string name="root_spec_ontextchanged">onTextChanged</string>
    <string name="logic_popup_title_remove_list">Remove List</string>
</resources>
